<resources>
    <string name="app_name">糖原</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">糖原</string>
    <string name="nav_header_subtitle">欣赏不一样的人间烟火</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_normalchat">聊一聊</string>
    <string name="menu_chitchat">侃一侃</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="lorel_ipsum">滚滚长江东逝水，浪花淘尽英雄。是非成败转头空，青山依旧在，几度夕阳红。白发渔樵江渚上，惯看秋月春风。一壶浊酒喜相逢，古今多少事， 都付笑谈中。滚滚长江东逝水，浪花淘尽英雄。是非成败转头空，青山依旧在，几度夕阳红。白发渔樵江渚上，惯看秋月春风。一壶浊酒喜相逢，古今多少事， 都付笑谈中。滚滚长江东逝水，浪花淘尽英雄。是非成败转头空，青山依旧在，几度夕阳红。白发渔樵江渚上，惯看秋月春风。一壶浊酒喜相逢，古今多少事， 都付笑谈中。</string>
    <string name="title_activity_post">帖子</string>
    <string name="new_post">发帖</string>
    <string name="new_post_beginning">今天晚上，很好的月光……</string>
    <string name="send_post">发帖</string>
    <string name="select_image">选择图片</string>
    <string name="post_sent">发帖成功！</string>
    <string name="login">登录</string>
    <string name="password">密码</string>
    <string name="phoneNumber">手机号码</string>
    <string name="phone_number_password_not_match">用户不存在或密码错误。</string>
    <string name="login_success">登录成功！</string>
    <string name="nickname">昵称</string>
    <string name="signup_login_success">注册并登录成功！</string>
    <string name="bio_example">生存还是毁灭，这是一个值得考虑的问题；默然忍受命运的暴虐的毒箭，或是挺身反抗人世的无涯的苦难，通过斗争把它们扫清，这两种行为，哪一种更高贵？</string>
    <string name="user_profile">用户资料</string>
    <string name="text_is_empty">请输入文本。</string>
    <string name="send_post_error">发帖失败。</string>
    <string name="text_is_too_long">文本过长。</string>
    <string name="login_or_signup">登录或注册</string>
    <string name="about">关于</string>
    <string name="unknown_version">未知版本</string>
    <string name="development_team">开发团队</string>
    <string name="all_members_joined_developing">所有成员皆参与了开发过程的全部工作。</string>
    <string name="special_commemoration">特别纪念</string>
    <string name="test_on_mi5">糖原在一台序列号为6a34145e的小米5上完成调试。</string>
    <string name="valid_phone_number">手机号码格式错误。</string>
    <string name="edit_profile">编辑个人资料</string>
    <string name="avatar">头像</string>
    <string name="bio">签名</string>
    <string name="email">电子邮件</string>
    <string name="region">区域</string>
    <string name="ok">完成</string>
    <string name="edit_profile_success">修改用户资料完成！</string>
    <string name="fields_unfinished">存在未完成的字段。</string>
    <string name="password_is_empty">密码为空。</string>
    <string name="see_replies">查看回复</string>
    <string name="comment_hint">君子欲讷于言而敏于行……</string>
    <string name="comment_sent">评论已发送。</string>
    <string name="send_comment_error">发送评论失败。</string>
    <string name="comment">评论</string>
    <string name="loading_comments">加载评论……</string>
    <string name="of_comments">" 条评论"</string>
    <string name="no_comment">无评论</string>
    <string name="reply_to">回复：</string>
    <string name="no_reply">无回复</string>
    <string name="of_replies">" 条回复"</string>
    <string name="reply_sent">回复已发送。</string>
    <string name="logo_design">Logo 设计</string>
    <string name="delete">删除</string>
    <string name="post_deleted">帖子已删除。</string>
    <string name="delete_post">删除帖子</string>
    <string name="confirm_delete_post">确定要删除这条帖子吗？</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="save_photo">保存图片</string>
    <string name="failed_to_save_photo">保存图片失败。</string>
    <string name="photo_saved">图片已保存。</string>
    <string name="post_does_not_exist">帖子不存在</string>
    <string name="post_may_be_deleted">帖子可能已被删除。</string>
    <string name="just_now">刚刚</string>
    <string name="minutes_before">" 分钟前"</string>
    <string name="hours_before">" 小时前"</string>
    <string name="comment_deleted">评论已删除。</string>
    <string name="copy">复制</string>
    <string name="network_error">网络错误</string>
    <string name="load_post_error">加载帖子失败</string>
    <string name="post_may_be_deleted_or_network_error">帖子可能已被删除或网络错误。</string>
    <string name="load_comments_error">加载评论失败</string>
    <string name="notice">公告</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="replied_your_comment">回复了你的评论</string>
    <string name="commented_your_post">评论了你的帖子</string>
    <string name="message">消息</string>
    <string name="no_message">无消息</string>
    <string name="unloggedin">未登录</string>
    <string name="codename_design">代号设计</string>
    <string name="today">今天</string>
    <string name="yesterday">昨天</string>
    <string name="the_day_before_yesterday">前天</string>
    <string name="failed_to_fetch_categories">无法获取领域。</string>
    <string name="waiting_for_loading_categories">正在等待加载领域……</string>
    <string name="sending_post_no_category">未选择领域，确定要发送吗？</string>
    <string name="category">领域</string>
    <string name="_24hpost">24小时新帖数：</string>
    <string name="total_post_count">总帖数：</string>
    <string name="failed_to_load_category">无法加载领域。</string>
    <string name="search">搜索</string>
    <string name="please_enter_keyword">请输入关键字……</string>
    <string name="post">帖子</string>
    <string name="no_post_result">帖子无结果</string>
    <string name="reply">回复</string>
    <string name="cannot_mark_notification">无法将这条通知标为已读。</string>
    <string name="top">回顶</string>
    <string name="user">用户</string>
    <string name="follow">关注</string>
    <string name="followed">已关注</string>
    <string name="no_user_result">用户无结果</string>
    <string name="no_comment_result">评论无结果</string>
    <string name="no_post_to_show">没有足够的帖子可供显示。</string>
</resources>