<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_normalchat"
            android:icon="@drawable/icon_normalchat"
            android:title="@string/menu_normalchat" />
        <item
            android:id="@+id/nav_chitchat"
            android:icon="@drawable/icon_chitchat"
            android:title="@string/menu_chitchat" />

        <item
            android:id="@+id/nav_message"
            android:icon="@drawable/icon_notice"
            android:title="@string/message" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/icon_about"
            android:title="@string/about" />
    </group>
</menu>