<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_normalchat">

    <fragment
        android:id="@+id/nav_normalchat"
        android:name="com.qingshuige.tangyuan.ui.NormalChatFragment"
        android:label="@string/menu_normalchat"
        tools:layout="@layout/fragment_normalchat" />

    <fragment
        android:id="@+id/nav_chitchat"
        android:name="com.qingshuige.tangyuan.ui.ChitchatFragment"
        android:label="@string/menu_chitchat"
        tools:layout="@layout/fragment_chitchat" />

    <fragment
        android:id="@+id/nav_message"
        android:name="com.qingshuige.tangyuan.ui.MessageFragment"
        android:label="@string/message"
        tools:layout="@layout/fragment_message" />

    <fragment
        android:id="@+id/nav_about"
        android:name="com.qingshuige.tangyuan.ui.AboutFragment"
        android:label="@string/about"
        tools:layout="@layout/fragment_about" />
</navigation>