<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CategoryActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.Tangyuan.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:popupTheme="@style/Theme.Tangyuan.PopupOverlay"
            app:title="@string/category" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:scrollbarStyle="outsideInset"
        android:scrollbars="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ProgressBar
                android:id="@+id/pgBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="5dp"
                    android:src="@drawable/icon_category" />

                <TextView
                    android:id="@+id/textCategoryName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:gravity="center_vertical"
                    android:text="@string/category"
                    android:textColor="@color/mazarine_blue"
                    android:textSize="25sp"
                    android:textStyle="bold" />
            </LinearLayout>


            <TextView
                android:id="@+id/text24hNewPost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_24hpost" />

            <TextView
                android:id="@+id/textTotalPost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total_post_count" />

            <TextView
                android:id="@+id/textCategoryDisc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/lorel_ipsum" />

            <ProgressBar
                android:id="@+id/pgBarPostLoad"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:indeterminate="false"
                android:max="1000"
                android:min="0" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcvCategoryPosts"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>